[project]
name = "MBO-LOB-analyzer"
version = "0.3.0"
description = "Deep statistical analysis of raw MBO events and LOB snapshots for intraday trading signal discovery"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "HFT Pipeline Team" }
]
keywords = [
    "mbo",
    "limit-order-book",
    "lob",
    "hft",
    "high-frequency-trading",
    "microstructure",
    "order-flow",
    "order-flow-imbalance",
    "volatility",
    "intraday-trading",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyarrow>=15.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
mbo-lob-analyze = "rawlobanalyzer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rawlobanalyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
